# Bot-keuangan-indiv

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: user-flow.md
docs/plans/: 2026-05-30-bot04-mvp-task-plan.md  2026-05-31-report-transaction-log-task-plan.md
src/bot04/: __init__.py  config.py  domain.py  main.py
src/bot04/bot/: __init__.py  app.py  handlers_confirm.py  handlers_manual_expense.py  handlers_manual_income.py  handlers_manual_investment.py  handlers_quick_input.py  handlers_reports.py  handlers_start.py  handlers_transactions.py  help_text.py  keyboards.py
src/bot04/database/: __init__.py  categories.py  connection.py  schema.py  transactions.py  users.py
src/bot04/reports/: __init__.py  aggregator.py  date_ranges.py  formatter.py
src/bot04/services/: __init__.py  category_matcher.py  (+6 more)
tests/: test_bot_app.py  test_bot_commands.py  test_categories_repository.py  test_category_matcher.py  test_config.py  test_date_parser.py  test_date_ranges.py  test_domain.py  test_handlers_confirm.py  test_handlers_manual_expense.py  test_handlers_manual_income.py  test_handlers_manual_investment.py  test_handlers_quick_input.py  test_handlers_reports.py  test_handlers_start.py  test_handlers_transactions.py  test_help_text.py  test_keyboards.py  test_money_parser.py  test_pending_store.py  test_project_structure.py  test_quick_input_parser.py  test_readme.py  test_report_aggregator.py  test_report_formatter.py  test_schema.py  test_transaction_preview.py  test_transaction_service.py  test_transactions_repository.py  test_users_repository.py
